--- a/Recetas/IpadStoryboard.storyboard
+++ b/Recetas/IpadStoryboard.storyboard
@@ -301,17 +301,9 @@
                                 <rect key="frame" x="0.0" y="26" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Nueva Receta" id="bYZ-KJ-dHJ">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="fqo-wC-KPI">
-                                            <connections>
-                                                <action selector="cancelarPulsarBoton:" destination="60E-w6-whh" id="oDK-6I-daw"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Guardar" id="RC8-oI-PTQ">
-                                            <connections>
-                                                <action selector="guardarPulsarBoton:" destination="60E-w6-whh" id="JtX-Xb-cmP"/>
-                                            </connections>
-                                        </barButtonItem>
+                                    <navigationItem title="Editar" id="bYZ-KJ-dHJ">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="fqo-wC-KPI"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Guardar" id="RC8-oI-PTQ"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -333,14 +325,6 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="QYE-zn-mvR"/>
-                    <connections>
-                        <outlet property="editadoDescripcionViewController" destination="Pj4-UX-k9y" id="4pe-qD-jbJ"/>
-                        <outlet property="editadoIngredientesTextView" destination="iqA-Ht-50h" id="LSt-de-D9g"/>
-                        <outlet property="editadoNombreTextField" destination="cNq-WQ-jji" id="0I6-jb-2n2"/>
-                        <outlet property="guardarDescripcionTextView" destination="Pj4-UX-k9y" id="Uan-6l-xTQ"/>
-                        <outlet property="guardarIngredientesTextView" destination="iqA-Ht-50h" id="qkA-WG-o5s"/>
-                        <outlet property="tituloTextField" destination="cNq-WQ-jji" id="kkC-kl-HtO"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QsJ-cz-QAD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
